create login routine
